Tests/validity_tests/build_maze_enhanced/build_39x39_enhanced_maze_on_cliff.expout

Welcome to MineCraft MazeRunner!
--------------------------------

------------- MAIN MENU -------------
1) Generate Maze
2) Build Maze in MineCraft
3) Solve Maze
4) Show Team Information
5) Exit

Enter Menu item to continue:

------------- GENERATE MAZE -------------
1) Read Maze from terminal
2) Generate Random Maze
3) Generate Random Maze without modifying terrain (Enhancements)
4) Back

Enter Menu item to continue:
Enter the basePoint of the maze:
Enter the length and width of the maze:
Length and width set to:
39 39
Reading terrain
Maze generated
**Printing Maze**
BasePoint: (700, 72, -43)
Structure:
xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
......................................x
xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.x
x.........x...........x...x.....x...x.x
x.xxxxxxx.x.x.xxxxxxx.x.x.x.x.x.x.x.x.x
x.x.x...x.x.x.x.x...x.x.x.x.x.x.x.x.x.x
x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x
x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x
x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x
x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x
x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.xxx.x.x.x
x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.xxx.x.x.x
x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.xox.x.x.x
x.x.x.x.x.x.x.x.x.x...x.x...x.xxx.x.x.x
x.x.x.x.x.x.x.x.x.xxxxx.xxxxx.xxx.x.x.x
x.x...x...x.x.x.x.xxxxx...xxx...x.x.x.x
x.xxxxxxxxx.x.x.x.xxoxxxx.xoxxx.x.x.x.x
x.x.........x.x.x.xxxxx.x.xxx.x.x.x.x.x
x.x.xxxxxxxxx.x.x.xxxxx.x.xxx.x.x.x.x.x
x.x.....x.....x.....x...x.....x.x.x.x.x
x.xxxxx.x.x.xxxxxxxxxxx.xxxxx.x.x.x.x.x
x.x...x.x.x...x.....x...x...x.x.x.x.x.x
x.x.x.x.x.xxxxxxx.x.x.x.x.x.x.x.x.x.x.x
x.x.x.x.x.xxxxxxx.x.x.x.x.x.x.x.x.x.x.x
x.x.x.x.x.xooooox.x.x.x.x.x.x.x.x.x.x.x
x.x.x.x.x.xxxxxxx.x.x.x.x.x.x.x.x.x.x.x
x.x.x.x.x.xxxxxxx.x.x.x.x.x.x.x.x.x.x.x
x.x.x.x.x...x...x.x.x.x.x.x.x.x.x.x.x.x
x.x.x.x.xxx.x.x.x.x.x.x.x.x.x.x.x.x.x.x
x.x.x.x...x.x.x.x.x.x.x.x.x.x.x.x.x.x.x
x.x.x.xxx.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x
x.x.x...x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x
x.x.xxx.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x
x.x...x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x
x.xxx.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x.x
x...x.x.x.x.x.x.x.x.x.x.x.x...x.x.x.x.x
x.x.x.x.x.x.x.x.x.x.x.x.x.xxx.x.x.x.x.x
x.x...x...x...x...x...x...x...x...x...x
xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
**End Printing Maze**

------------- GENERATE MAZE -------------
1) Read Maze from terminal
2) Generate Random Maze
3) Generate Random Maze without modifying terrain (Enhancements)
4) Back

Enter Menu item to continue:
Returning to menu...

------------- MAIN MENU -------------
1) Generate Maze
2) Build Maze in MineCraft
3) Solve Maze
4) Show Team Information
5) Exit

Enter Menu item to continue:

Exiting...

Returning minecraft world to normal and deleting generated mazes...
Please wait 1-3 minutes.

The End!